--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,17 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Burger</title>
     <script src="https://code.jquery.com/jquery.js"></script>
-    <title>Burgers</title>
-    <link rel="stylesheet" href="/assets/css/burger_style.css">
     <script src="/assets/js/burger.js"></script>
+    <link href="/assets/css/burger.css">
 </head>
 
 <body>
-    <h1>Eat da Burger</h1>
+    <h1>Burger</h1>
     <img src="/assets/img/burger.png" alt="burger">
     {{{body}}}
+
+    <form id="add-burger-form">
+        <input id="burgerName" type="text" placeholder="burger name" />
+        <button>Add</button>
+    </form>
 </body>
 
 </html>
