--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,18 +7,13 @@
     <title>Burger</title>
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="/assets/js/burger.js"></script>
-    <link href="/assets/css/burger.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="/assets/css/burger.css">
 </head>
 
 <body>
-    <h1>Burger</h1>
-    <img src="/assets/img/burger.png" alt="burger">
     {{{body}}}
-
-    <form id="add-burger-form">
-        <input id="burgerName" type="text" placeholder="burger name" />
-        <button>Add</button>
-    </form>
 </body>
 
 </html>
