add customer form

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -19,8 +19,14 @@
 
             <form class="form-group" id="add-burger-form">
                 <input id="burgerName" type="text" placeholder="burger name" />
-                <button>Add</button>
+                <button>Add Burger</button>
             </form>
+
+            <form class="form-group" id="add-customer-form">
+                <input id="customerName" type="text" placeholder="customer name" />
+                <button>Add Customer</button>
+            </form>
+
 
             <select id="customer-select">
                 <option>Customers</option>
