--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,48 +1,52 @@
 <div class="container">
     <div class="row">
-        <div class="col-sm jumbotron">
-            <h3>Available</h3>
-            <ul>
+        <div class="col-sm jumbotron" style="background-color:#9ac44a;">
+            <h3 class="text-light">Available</h3>
+
+            <ul class="list-group">
                 {{#each burgers}}
                 {{#unless dataValues.devoured}}
-                <li class="d-flex">
+                <li class="list-group-item d-flex justify-content-between">
                     {{dataValues.burgerName}}
-                    <button class="devour-button" data-id="{{dataValues.id}}">Devour</button>
+                    <button class="devour-button btn" style="background-color: #f4dc7a;" data-id="{{dataValues.id}}">Devour</button>
                 </li>
                 {{/unless}}
                 {{/each}}
             </ul>
         </div>
         <div class="col-sm">
-            <h1>Burger</h1>
-            <img src="/assets/img/burger.png" alt="burger">
-
-            <form class="form-group" id="add-burger-form">
-                <input id="burgerName" type="text" placeholder="burger name" />
-                <button>Add Burger</button>
-            </form>
-
-            <form class="form-group" id="add-customer-form">
-                <input id="customerName" type="text" placeholder="customer name" />
-                <button>Add Customer</button>
-            </form>
-
-
-            <select id="customer-select">
-                <option>Customers</option>
-                {{#each customers}}
-                <option data-id="{{dataValues.id}}">{{dataValues.name}}</option>
-                {{/each}}
-            </select>
+            <h1 class="text-light">Burger</h1>
+            <div class="card" style="max-width: 100%; height: auto;">
+                <img class="img-fluid" src="/assets/img/burger.jpg" alt="burger">
+                <div class="card-body">
+                    <p class="card-text">See which monster likes which burger. This is an all-you-can-eat burger joint. Keep adding and devouring.</p>
+                </div>
+                <div class="form-group">
+                    <form id="add-burger-form">
+                        <input class="form-control" id="burgerName" type="text" placeholder="Burger Name" />
+                        <button class="form-control btn btn-danger btn-lg mt-1 mb-1">Add a Burger</button>
+                    </form>
+                    <form class="form-group" id="add-customer-form">
+                        <input class="form-control" id="customerName" type="text" placeholder="Monster Name" />
+                        <button class="form-control btn btn-danger btn-lg mt-1">Add a Monster</button>
+                    </form>
+                </div>
+                <select id="customer-select">
+                    <option>Select a Monster</option>
+                    {{#each customers}}
+                    <option data-id="{{dataValues.id}}">{{dataValues.name}}</option>
+                    {{/each}}
+                </select>
+            </div>
         </div>
-        <div class="col-sm jumbotron">
+        <div class="col-sm jumbotron text-light" style="background-color: #704e42;">
             <h3>Devoured</h3>
-            <ul id="devoured">
+            <ul id="devoured" class="list-group">
                 {{#each burgers}}
                 {{#if dataValues.devoured}}
-                <li data-id="{{dataValues.CustomerId}}">
+                <li class="list-group-item d-flex justify-content-between text-dark" data-id="{{dataValues.CustomerId}}">
                     {{dataValues.burgerName}}
-                    <button class="delete-btn" data-id="{{dataValues.id}}">Delete</button>
+                    <button class="delete-btn btn btn-danger" data-id="{{dataValues.id}}">Delete</button>
                 </li>
                 {{/if}}
                 {{/each}}
